Fix Netlify deploy: Update Node to 20.19.0, fix Vite config and index.html paths

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,11 @@
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20.19.0"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
 
 [[redirects]]
